# wood-ball

./: .gitignore  notes.txt  pyproject.toml  readme.md
lib/: bball_ref.py  draw_plotly_court.py  nba_stats.py  odds.py
local/duckdb_table_definitions/: box_adv_player.sql  box_adv_team.sql  box_trad_player.sql  box_trad_team.sql  nba_game_logs.sql
local/scripts/: load_box_score_stats.py  load_game_logs.py
local_scripts/: load_box_score_stats.py  load_game_logs.py
notebooks/: duckdb_analysis_queries.ipynb  save_odds.py  table_test.py  table_test_1.py  test copy.ipynb  test.ipynb  test.sql  test_copy_2.ipynb
src/wood_ball/: __init__.py  main.py
src/wood_ball/stats/: draw_hex_chart.py  nba_stats.py  odds.py  tidy_table.py
wood-ball/: duckdb_analysis_queries.ipynb  test copy.ipynb  test.ipynb
