[project]
name = "wood-ball"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cole", email = "cwood0107@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.3",
    "great-tables>=0.15.0",
    "nba-api>=1.6.1",
    "polars>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "marimo>=0.10.4",
    "ruff>=0.8.3",
]
